--- a/hang/templates/blog.html
+++ b/hang/templates/blog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Blog</title>
+	<title>Your Orders</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->	
@@ -72,7 +72,7 @@
 				<nav class="limiter-menu-desktop container">
 					
 					<!-- Logo desktop -->		
-					<a href="#" class="logo">
+					<a href="/" class="logo">
 						<img src="../static/images/icons/logo-03.png" alt="IMG-LOGO">
 					</a>
 
@@ -123,7 +123,7 @@
 		<div class="wrap-header-mobile">
 			<!-- Logo moblie -->		
 			<div class="logo-mobile">
-				<a href="index.html"><img src="../static/images/icons/logo-03.png" alt="IMG-LOGO"></a>
+				<a href="/"><img src="../static/images/icons/logo-03.png" alt="IMG-LOGO"></a>
 			</div>
 
 			<!-- Icon header -->
@@ -247,53 +247,7 @@
 			
 			<div class="header-cart-content flex-w js-pscroll" >
 				<ul class="header-cart-wrapitem w-full" id='right-menu-cart' >
-					 <!--<li class="header-cart-item flex-w flex-t m-b-12">
-						<div class="header-cart-item-img">
-							<img src="../static/images/item-cart-01.jpg" alt="IMG">
-						</div>
-
-						<div class="header-cart-item-txt p-t-8">
-							<a href="#" class="header-cart-item-name m-b-18 hov-cl1 trans-04">
-								White Shirt Pleat
-							</a>
-
-							<span class="header-cart-item-info">
-								1 x $19.00
-							</span>
-						</div>
-					</li> 
-
-					 <li class="header-cart-item flex-w flex-t m-b-12">
-						<div class="header-cart-item-img">
-							<img src="../static/images/item-cart-02.jpg" alt="IMG">
-						</div>
-
-						<div class="header-cart-item-txt p-t-8">
-							<a href="#" class="header-cart-item-name m-b-18 hov-cl1 trans-04">
-								Converse All Star
-							</a>
-
-							<span class="header-cart-item-info">
-								1 x $39.00
-							</span>
-						</div>
-					</li>
-
-					<li class="header-cart-item flex-w flex-t m-b-12">
-						<div class="header-cart-item-img">
-							<img src="../static/images/item-cart-03.jpg" alt="IMG">
-						</div>
-
-						<div class="header-cart-item-txt p-t-8">
-							<a href="#" class="header-cart-item-name m-b-18 hov-cl1 trans-04">
-								Nixon Porter Leather
-							</a>
-
-							<span class="header-cart-item-info">
-								1 x $17.00
-							</span>
-						</div>
-					</li>--> 
+					 
 				</ul> 
 				
 				
@@ -329,7 +283,7 @@
 		</span>
 	</section>	
 
-	<!-- Shoping Cart -->
+	<!-- your orders section -->
 	<form class="bg0 p-t-75 p-b-85">
 		<div class="container products-container product">
 			<div class="row">
@@ -351,133 +305,14 @@
 									
 								</tr>
 							</table>
-							<table  class="table-shopping-orders">
-								<tr class="table_row">
-									<td class="column-1">
-										<div class="how-itemcart1 product">
-											<img src="../static/images/HGWCS001.jpg" alt="IMG">
-										</div>
-									</td>
-									<td class="column-2"> <div class="prd-prop">order id : 112005 </div> <div class="prd-name">White T-shirt</div>  <div class="prd-prop">size: S | colour: white </div></td>
-									<td class="column-3">&#8377; 18</td>
-									 
-									<td class="column-4">
-										<span>1</span>
-									</td>
-	
-									<td class="column-5" name='' id='col5' > 
-										<div name='product-sum' class='prd-sum'> &#8377; 150</div>  
-				
-									</td>
-									<td class="column-6">  <div class="prd-prop">Ranganaatha puram 1st street kongu main road Tiruppur-641607</div> <div class="prd-prop">Name : harihar</div> <div class="prd-prop">ph.no : 9600896275 </div></td>
-									<td class="column-7" id="order-status">
-										<ul>
-											
-										<li><div><i class="icon-sts zmdi zmdi-check-circle"></i> Ordered &nbsp; </div> </li>
-										<!-- <div class="icon-sts"></div> -->
-										<li><div><i class="icon-sts completed zmdi zmdi-check-circle"></i> Shipped &nbsp; </div></li>
-										<!-- <div class="icon-sts"></div> -->
-										<li><div><i class="icon-sts zmdi zmdi-check-circle"></i> Delivered</div> <!--<div style="padding-left: 10%; padding-top: 2%;">(12.01.2021)</div>--></li>
-										</ul>
-									</td>
-									
-									
-								</tr>
+
+							<div id="orders-table">
 							
-								
-								
-							</table>
-						
-							<div>
-								<div class="flex-w flex-sb-m bor15 p-t-18 p-b-15 p-lr-60 p-lr-15-sm" >
-		
+								<h2 class="order-head text-center"></h2>
 
-									
-
-									<div class="flex-c-m stext-101 cl2 size-100 bg8 bor13 hov-btn3 p-lr-15 pointer trans-04 m-tb-10 m-l-auto"  id="myBtncancel" >
-										  CANCEL ORDER <div class="tooltip100" id="hide-mobile" data-tooltip="you can only cancel the order before shipped">
-											&nbsp; <i class="zmdi zmdi-help-outline"></i>
-														</div>
-									</div>
-									
 							
-									<!-- <div class="flex-c-m stext-101 cl2 size-100 bg8 bor13 hov-btn3 p-lr-15 pointer trans-04 m-tb-10">
-										 REFUND ORDER <div class="icon-header-item cl2 hov-cl1 trans-04 p-lr-15">
-														<i class="zmdi zmdi-help-outline"></i>
-														</div>
-														<div class="tooltip100" id="hide-mobile" data-tooltip="3 days return policy">
-															&nbsp; <i class="zmdi zmdi-help-outline"></i>
-																		</div>
-									</div> -->
-										
-								</div>
-
 							</div>
-						
-						</br>
-
-						<table  class="table-shopping-orders">
-							<tr class="table_row">
-								<td class="column-1">
-									<div class="how-itemcart1 product">
-										<img src="../static/images/HGWCS001.jpg" alt="IMG">
-									</div>
-								</td>
-								<td class="column-2"> <div class="prd-prop">order id : 112005 </div> <div class="prd-name">White T-shirt</div>  <div class="prd-prop">size: S | colour: white </div></td>
-								<td class="column-3">&#8377; 18</td>
-								 
-								<td class="column-4">
-									<span>1</span>
-								</td>
-
-								<td class="column-5" name='' id='col5' > 
-									<div name='product-sum' class='prd-sum'> &#8377; 150</div>  
-			
-								</td>
-								<td class="column-6">  <div class="prd-prop">Ranganaatha puram 1st street kongu main road Tiruppur-641607</div> <div class="prd-prop">Name : harihar</div> <div class="prd-prop">ph.no : 9600896275 </div></td>
-								<td class="column-7" id="order-status">
-									<ul>
-										
-									<li><div><i class="icon-sts zmdi zmdi-check-circle"></i> Ordered &nbsp; </div> </li>
-									<!-- <div class="icon-sts"></div> -->
-									<li><div><i class="icon-sts completed zmdi zmdi-check-circle"></i> Shipped &nbsp; </div></li>
-									<!-- <div class="icon-sts"></div> -->
-									<li><div><i class="icon-sts zmdi zmdi-check-circle"></i> Delivered</div> <!--<div style="padding-left: 10%; padding-top: 2%;">(12.01.2021)</div>--></li>
-									</ul>
-								</td>
-								
-								
-							</tr>
-						
-							
-							
-						</table>
 					
-						<div>
-							<div class="flex-w flex-sb-m bor15 p-t-18 p-b-15 p-lr-60 p-lr-15-sm" >
-	
-
-								
-
-								<div class="flex-c-m stext-101 cl2 size-100 bg8 bor13 hov-btn3 p-lr-15 pointer trans-04 m-tb-10 m-l-auto"  id="myBtncancel" >
-										  CANCEL ORDER <div class="tooltip100" id="hide-mobile" data-tooltip="you can only cancel the order before shipped">
-											&nbsp; <i class="zmdi zmdi-help-outline"></i>
-														</div>
-									</div>
-								
-						
-								<!-- <div class="flex-c-m stext-101 cl2 size-100 bg8 bor13 hov-btn3 p-lr-15 pointer trans-04 m-tb-10">
-									 REFUND ORDER <div class="icon-header-item cl2 hov-cl1 trans-04 p-lr-15">
-													<i class="zmdi zmdi-help-outline"></i>
-													</div>
-													<div class="tooltip100" id="hide-mobile" data-tooltip="3 days return policy">
-														&nbsp; <i class="zmdi zmdi-help-outline"></i>
-																	</div>
-								</div> -->
-									
-							</div>
-
-						</div>
 						</div>
 					</div>
 				</div>
@@ -485,424 +320,6 @@
 		</div>
 	</form>
 	<!-- Content page -->
-	<!-- <section class="bg0 p-t-62 p-b-60">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-8 col-lg-9 p-b-80">
-					<div class="p-r-45 p-r-0-lg">
-						 item blog
-						<div class="p-b-63">
-							<a href="blog-detail.html" class="hov-img0 how-pos5-parent">
-								<img src="../static/images/blog-04.jpg" alt="IMG-BLOG">
-
-								<div class="flex-col-c-m size-123 bg9 how-pos5">
-									<span class="ltext-107 cl2 txt-center">
-										22
-									</span>
-
-									<span class="stext-109 cl3 txt-center">
-										Jan 2018
-									</span>
-								</div>
-							</a>
-
-							<div class="p-t-32">
-								<h4 class="p-b-15">
-									<a href="blog-detail.html" class="ltext-108 cl2 hov-cl1 trans-04">
-										8 Inspiring Ways to Wear Dresses in the Winter
-									</a>
-								</h4>
-
-								<p class="stext-117 cl6">
-									Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce eget dictum tortor. Donec dictum vitae sapien eu varius
-								</p>
-
-								<div class="flex-w flex-sb-m p-t-18">
-									<span class="flex-w flex-m stext-111 cl2 p-r-30 m-tb-10">
-										<span>
-											<span class="cl4">By</span> Admin  
-											<span class="cl12 m-l-4 m-r-6">|</span>
-										</span>
-
-										<span>
-											StreetStyle, Fashion, Couple  
-											<span class="cl12 m-l-4 m-r-6">|</span>
-										</span>
-
-										<span>
-											8 Comments
-										</span>
-									</span>
-
-									<a href="blog-detail.html" class="stext-101 cl2 hov-cl1 trans-04 m-tb-10">
-										Continue Reading
-
-										<i class="fa fa-long-arrow-right m-l-9"></i>
-									</a>
-								</div>
-							</div>
-						</div> -->
-
-						<!-- item blog
-						<div class="p-b-63">
-							<a href="blog-detail.html" class="hov-img0 how-pos5-parent">
-								<img src="../static/images/blog-05.jpg" alt="IMG-BLOG">
-
-								<div class="flex-col-c-m size-123 bg9 how-pos5">
-									<span class="ltext-107 cl2 txt-center">
-										18
-									</span>
-
-									<span class="stext-109 cl3 txt-center">
-										Jan 2018
-									</span>
-								</div>
-							</a>
-
-							<div class="p-t-32">
-								<h4 class="p-b-15">
-									<a href="blog-detail.html" class="ltext-108 cl2 hov-cl1 trans-04">
-										The Great Big List of Men’s Gifts for the Holidays 
-									</a>
-								</h4>
-
-								<p class="stext-117 cl6">
-									Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce eget dictum tortor. Donec dictum vitae sapien eu varius
-								</p>
-
-								<div class="flex-w flex-sb-m p-t-18">
-									<span class="flex-w flex-m stext-111 cl2 p-r-30 m-tb-10">
-										<span>
-											<span class="cl4">By</span> Admin  
-											<span class="cl12 m-l-4 m-r-6">|</span>
-										</span>
-
-										<span>
-											StreetStyle, Fashion, Couple  
-											<span class="cl12 m-l-4 m-r-6">|</span>
-										</span>
-
-										<span>
-											8 Comments
-										</span>
-									</span>
-
-									<a href="blog-detail.html" class="stext-101 cl2 hov-cl1 trans-04 m-tb-10">
-										Continue Reading
-
-										<i class="fa fa-long-arrow-right m-l-9"></i>
-									</a>
-								</div>
-							</div>
-						</div>  -->
-
-						<!-- item blog
-						<div class="p-b-63">
-							<a href="blog-detail.html" class="hov-img0 how-pos5-parent">
-								<img src="../static/images/blog-06.jpg" alt="IMG-BLOG">
-
-								<div class="flex-col-c-m size-123 bg9 how-pos5">
-									<span class="ltext-107 cl2 txt-center">
-										16
-									</span>
-
-									<span class="stext-109 cl3 txt-center">
-										Jan 2018
-									</span>
-								</div>
-							</a>
-
-							<div class="p-t-32">
-								<h4 class="p-b-15">
-									<a href="blog-detail.html" class="ltext-108 cl2 hov-cl1 trans-04">
-										5 Winter-to-Spring Fashion Trends to Try Now
-									</a>
-								</h4>
-
-								<p class="stext-117 cl6">
-									Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce eget dictum tortor. Donec dictum vitae sapien eu varius
-								</p>
-
-								<div class="flex-w flex-sb-m p-t-18">
-									<span class="flex-w flex-m stext-111 cl2 p-r-30 m-tb-10">
-										<span>
-											<span class="cl4">By</span> Admin  
-											<span class="cl12 m-l-4 m-r-6">|</span>
-										</span>
-
-										<span>
-											StreetStyle, Fashion, Couple  
-											<span class="cl12 m-l-4 m-r-6">|</span>
-										</span>
-
-										<span>
-											8 Comments
-										</span>
-									</span>
-
-									<a href="blog-detail.html" class="stext-101 cl2 hov-cl1 trans-04 m-tb-10">
-										Continue Reading
-
-										<i class="fa fa-long-arrow-right m-l-9"></i>
-									</a>
-								</div>
-							</div>
-						</div>  
-
-						
-						<div class="flex-l-m flex-w w-full p-t-10 m-lr--7">
-							<a href="#" class="flex-c-m how-pagination1 trans-04 m-all-7 active-pagination1">
-								1
-							</a>
-
-							<a href="#" class="flex-c-m how-pagination1 trans-04 m-all-7">
-								2
-							</a>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-md-4 col-lg-3 p-b-80">
-					<div class="side-menu">
-						<div class="bor17 of-hidden pos-relative">
-							<input class="stext-103 cl2 plh4 size-116 p-l-28 p-r-55" type="text" name="search" placeholder="Search">
-
-							<button class="flex-c-m size-122 ab-t-r fs-18 cl4 hov-cl1 trans-04">
-								<i class="zmdi zmdi-search"></i>
-							</button>
-						</div>
-
-						<div class="p-t-55">
-							<h4 class="mtext-112 cl2 p-b-33">
-								Categories
-							</h4>
-
-							<ul>
-								<li class="bor18">
-									<a href="#" class="dis-block stext-115 cl6 hov-cl1 trans-04 p-tb-8 p-lr-4">
-										Fashion
-									</a>
-								</li>
-
-								<li class="bor18">
-									<a href="#" class="dis-block stext-115 cl6 hov-cl1 trans-04 p-tb-8 p-lr-4">
-										Beauty
-									</a>
-								</li>
-
-								<li class="bor18">
-									<a href="#" class="dis-block stext-115 cl6 hov-cl1 trans-04 p-tb-8 p-lr-4">
-										Street Style
-									</a>
-								</li>
-
-								<li class="bor18">
-									<a href="#" class="dis-block stext-115 cl6 hov-cl1 trans-04 p-tb-8 p-lr-4">
-										Life Style
-									</a>
-								</li>
-
-								<li class="bor18">
-									<a href="#" class="dis-block stext-115 cl6 hov-cl1 trans-04 p-tb-8 p-lr-4">
-										DIY & Crafts
-									</a>
-								</li>
-							</ul>
-						</div>
-
-						<div class="p-t-65">
-							<h4 class="mtext-112 cl2 p-b-33">
-								Featured Products
-							</h4>
-
-							<ul>
-								<li class="flex-w flex-t p-b-30">
-									<a href="#" class="wrao-pic-w size-214 hov-ovelay1 m-r-20">
-										<img src="../static/images/product-min-01.jpg" alt="PRODUCT">
-									</a>
-
-									<div class="size-215 flex-col-t p-t-8">
-										<a href="#" class="stext-116 cl8 hov-cl1 trans-04">
-											White Shirt With Pleat Detail Back
-										</a>
-
-										<span class="stext-116 cl6 p-t-20">
-											$19.00
-										</span>
-									</div>
-								</li>
-
-								<li class="flex-w flex-t p-b-30">
-									<a href="#" class="wrao-pic-w size-214 hov-ovelay1 m-r-20">
-										<img src="../static/images/product-min-02.jpg" alt="PRODUCT">
-									</a>
-
-									<div class="size-215 flex-col-t p-t-8">
-										<a href="#" class="stext-116 cl8 hov-cl1 trans-04">
-											Converse All Star Hi Black Canvas
-										</a>
-
-										<span class="stext-116 cl6 p-t-20">
-											$39.00
-										</span>
-									</div>
-								</li>
-
-								<li class="flex-w flex-t p-b-30">
-									<a href="#" class="wrao-pic-w size-214 hov-ovelay1 m-r-20">
-										<img src="../static/images/product-min-03.jpg" alt="PRODUCT">
-									</a>
-
-									<div class="size-215 flex-col-t p-t-8">
-										<a href="#" class="stext-116 cl8 hov-cl1 trans-04">
-											Nixon Porter Leather Watch In Tan
-										</a>
-
-										<span class="stext-116 cl6 p-t-20">
-											$17.00
-										</span>
-									</div>
-								</li>
-							</ul>
-						</div>
-
-						<div class="p-t-55">
-							<h4 class="mtext-112 cl2 p-b-20">
-								Archive
-							</h4>
-
-							<ul>
-								<li class="p-b-7">
-									<a href="#" class="flex-w flex-sb-m stext-115 cl6 hov-cl1 trans-04 p-tb-2">
-										<span>
-											July 2018
-										</span>
-
-										<span>
-											(9)
-										</span>
-									</a>
-								</li>
-
-								<li class="p-b-7">
-									<a href="#" class="flex-w flex-sb-m stext-115 cl6 hov-cl1 trans-04 p-tb-2">
-										<span>
-											June 2018
-										</span>
-
-										<span>
-											(39)
-										</span>
-									</a>
-								</li>
-
-								<li class="p-b-7">
-									<a href="#" class="flex-w flex-sb-m stext-115 cl6 hov-cl1 trans-04 p-tb-2">
-										<span>
-											May 2018
-										</span>
-
-										<span>
-											(29)
-										</span>
-									</a>
-								</li>
-
-								<li class="p-b-7">
-									<a href="#" class="flex-w flex-sb-m stext-115 cl6 hov-cl1 trans-04 p-tb-2">
-										<span>
-											April  2018
-										</span>
-
-										<span>
-											(35)
-										</span>
-									</a>
-								</li>
-
-								<li class="p-b-7">
-									<a href="#" class="flex-w flex-sb-m stext-115 cl6 hov-cl1 trans-04 p-tb-2">
-										<span>
-											March 2018
-										</span>
-
-										<span>
-											(22)
-										</span>
-									</a>
-								</li>
-
-								<li class="p-b-7">
-									<a href="#" class="flex-w flex-sb-m stext-115 cl6 hov-cl1 trans-04 p-tb-2">
-										<span>
-											February 2018
-										</span>
-
-										<span>
-											(32)
-										</span>
-									</a>
-								</li>
-
-								<li class="p-b-7">
-									<a href="#" class="flex-w flex-sb-m stext-115 cl6 hov-cl1 trans-04 p-tb-2">
-										<span>
-											January 2018
-										</span>
-
-										<span>
-											(21)
-										</span>
-									</a>
-								</li>
-
-								<li class="p-b-7">
-									<a href="#" class="flex-w flex-sb-m stext-115 cl6 hov-cl1 trans-04 p-tb-2">
-										<span>
-											December 2017
-										</span>
-
-										<span>
-											(26)
-										</span>
-									</a>
-								</li>
-							</ul>
-						</div>
-
-						<div class="p-t-50">
-							<h4 class="mtext-112 cl2 p-b-27">
-								Tags
-							</h4>
-
-							<div class="flex-w m-r--5">
-								<a href="#" class="flex-c-m stext-107 cl6 size-301 bor7 p-lr-15 hov-tag1 trans-04 m-r-5 m-b-5">
-									Fashion
-								</a>
-
-								<a href="#" class="flex-c-m stext-107 cl6 size-301 bor7 p-lr-15 hov-tag1 trans-04 m-r-5 m-b-5">
-									Lifestyle
-								</a>
-
-								<a href="#" class="flex-c-m stext-107 cl6 size-301 bor7 p-lr-15 hov-tag1 trans-04 m-r-5 m-b-5">
-									Denim
-								</a>
-
-								<a href="#" class="flex-c-m stext-107 cl6 size-301 bor7 p-lr-15 hov-tag1 trans-04 m-r-5 m-b-5">
-									Streetstyle
-								</a>
-
-								<a href="#" class="flex-c-m stext-107 cl6 size-301 bor7 p-lr-15 hov-tag1 trans-04 m-r-5 m-b-5">
-									Crafts
-								</a>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>	
-	 -->
 	
 	 
 <!-- Trigger/Open The Modal -->
