--- a/hang/templates/blog.html
+++ b/hang/templates/blog.html
@@ -276,10 +276,10 @@
 	<!-- Title page -->
 	<section class="bg-img1 txt-center p-lr-15 p-tb-92" style="background-image: url('../static/images/bg-02.jpg');">
 		<h2 class="ltext-105 cl0 txt-center">
-			Hang in Your Wardrobe
+			Hang it in Your Wardrobe
 		</h2>
 		<span class="stext-109 cl0 txt-center">
-			Choose One Of Them Perfect
+			Choose the perfect one
 		</span>
 	</section>	
 
